# thisbetterflippinwork

./: C++ Wifi Stack.txt  CMakeLists.txt  README.md  SECURITY_FACTORS.md  build.sh
include/: CommandProcessor.h  NetworkInfo.h  SecurityGrader.h  WifiScanner.h
src/: CommandProcessor.cpp  SecurityGrader.cpp  WifiScanner.cpp  main.cpp
tests/: test_security_grader.cpp
tools/: benchmark.cpp
